include spacer at the end of the page
We removed (shrunk, actually) a spacer div to push this box up to the
very bottom of the results list.  We need a spacer below it to replace
that one (especially on mobile, where the "Tweak my Results" button
hides the bottom of the results list if there is no spacer div)

--- a/CENTRAL_PACKAGE/css/custom1.css
+++ b/CENTRAL_PACKAGE/css/custom1.css
@@ -416,3 +416,4 @@ prm-advanced-search .uppercase { font-weight: bold; }
 
 /* adding the 'search elsewhere' box removes the need for this spacer */
 prm-search-result-list .list-spacer { height: 10px ; min-height: 10px; }
+prm-search-result-list .spacer-replacer { min-height: 200px; }
