change icon color on card
This CSS was mistakenly bound to the live-help-widget diirective instead of the live-help-card.

--- a/CENTRAL_PACKAGE/css/custom1.css
+++ b/CENTRAL_PACKAGE/css/custom1.css
@@ -368,7 +368,7 @@ a:hover {
   color: white;
   fill: white;
 }
-#novanet-live-help .md-warn svg {
+.md-warn svg {
   color: tomato;
   fill: tomato;
 }
