hotfix hide Item Level Hold button via CSS rather than JS
JS method was hiding Title Level Hold buttons in some cases

--- a/CENTRAL_PACKAGE/css/custom1.css
+++ b/CENTRAL_PACKAGE/css/custom1.css
@@ -460,3 +460,8 @@ prm-service-header {
 prm-service-header md-divider.md-primoExplore-theme {
   color: black;
 }
+
+/* hide item level holds and photocopies */
+prm-location-items prm-service-button {
+  display: none;
+}
