hide new course info mark
Hide this icon until maybe we configure it correctly

--- a/CENTRAL_PACKAGE/css/custom1.css
+++ b/CENTRAL_PACKAGE/css/custom1.css
@@ -485,3 +485,8 @@ prm-service-header md-divider.md-primoExplore-theme {
 prm-location-items prm-service-button {
   display: none;
 }
+
+/* hide the course icon until maybe we configure it correctly */
+.course-info-mark {
+    display: none;
+}
