--- a/CENTRAL_PACKAGE/css/custom1.css
+++ b/CENTRAL_PACKAGE/css/custom1.css
@@ -8,7 +8,7 @@ prm-topbar .top-nav-bar {
   color: #c5cfd7;
 }
 prm-main-menu .md-button .item-content {
-  font-family: Georgia, Times New Roman, Times, serif;
+  /* font-family: Georgia, Times New Roman, Times, serif; */
   letter-spacing: default;
   color:#c5cfd7;
 }
