fix comments to match style

--- a/01NOVA_NETWORK-CENTRAL_PACKAGE/css/custom1.css
+++ b/01NOVA_NETWORK-CENTRAL_PACKAGE/css/custom1.css
@@ -468,7 +468,8 @@ prm-service-header md-divider.md-primoExplore-theme {
   color: black;
 }
 
-/* novanet-library-hours custom directive */
+/**** novanet-library-hours custom directive ****/
+
 .novanet-library-hours header {
   font-weight: bold;
 }
