hide Primo 'Register' user button with JS instead of CSS

--- a/01NOVA_NETWORK-CENTRAL_PACKAGE/css/custom1.css
+++ b/01NOVA_NETWORK-CENTRAL_PACKAGE/css/custom1.css
@@ -472,8 +472,10 @@ prm-service-header md-divider.md-primoExplore-theme {
 prm-alma-other-members prm-service-button {
   display: none;
 }
+/*
+do this with JS instead
 prm-alma-other-members button[aria-label="register"] { display:none; } 
-
+*/
 
 /**** novanet-library-hours custom directive ****/
 
